test/should_fail/WrongType.hx
package test.should_fail;

@:keep
final d = test.Optionals.test({test: true, optionalField: "null"});
